# baker

./: .gitignore  LICENSE  README.md  core.py  demo.ipynb  exploration.ipynb  notebook.ipynb  parser.py  prompt.py  pyproject.toml  requirements.txt  schemas.py  seed.ipynb  settings.py  utils.py
data/: recipes_v1.json  recipes_v1_with_token_counts.json  recipes_v2.json
data/output/: parsed_recipes_all_8x7b.json  sample_8x22b.json  sample_8x7b.json  top_100ish_results.json
data/output/2_update_the_extraction_results/: 10_random_recipes_parsed.json
data/output/2_update_the_extraction_results/main_run/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+320 more)
data/output/tests/: french_crepe.json
notebooks/: 2_update_the_extraction_results.ipynb
requirements/: core.txt
src/baker/: __init__.py  parser.py  schemas.py  settings.py
src/baker.egg-info/: PKG-INFO  SOURCES.txt
src/baker/schemas/: __init__.py  action.py  base.py  duration.py  ingredient.py  intensity.py  range.py  recipe.py  step.py  temperature.py  units.py
src/recipe_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
