[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baker"
version = "0.1.0"
description = "A Recipe Parser using LLMs"
readme = "README.md"
authors = [{name = "Vianney Mixtur", email = "vianney.mixtur@outlook.fr"}]
keywords = ["scraper", "llm"]
dynamic = ["dependencies"]

requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest >= 8.0.0"]
dev = [
    "scikit-learn==1.4.0", 
    "openpyxl==3.1.2",
    "bumpver-2023.1129" 
    ]

[project.urls]
Homepage = "https://github.com/VianneyMI"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/core.txt"]}

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/baker/__init__.py" = ['__version__ = "{version}"']
