[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baker"
version = "0.2.0"
description = "Package to parse cooking recipes towards building an Recipe Recommender."
readme = "README.md"
authors = [{name = "Vianney Mixtur", email = "vianney.mixtur@outlook.fr"}]
dynamic = ["dependencies"]

requires-python = ">= 3.10"

[project.urls]
Homepage = "https://github.com/VianneyMI/baker"

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/core.txt"]}

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/baker/__init__.py" = ['__version__ = "{version}"']
